--- a/package.json
+++ b/package.json
@@ -8,7 +8,23 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
-    "ethers": ">=5.5.1 <6",
+    "@uniswap/sdk-core": "^3.2.2",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ifan-z/rainmaker-intern-project.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/ifan-z/rainmaker-intern-project/issues"
+  },
+  "homepage": "https://github.com/ifan-z/rainmaker-intern-project#readme",
+  "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
